[fix] autocomplete shadow on dark mode

--- a/src/less/definitions.less
+++ b/src/less/definitions.less
@@ -52,6 +52,7 @@
   /// Autocomplete Colors
   --color-autocomplete-font: #000;
   --color-autocomplete-border: transparent;
+  --color-autocomplete-shadow: 0 2px 8px 1px rgba(64, 60, 67, 0.24);
   --color-autocomplete-background: #fff;
   --color-autocomplete-background-hover: #f2f2f2;
   /// Answer Colors
@@ -165,6 +166,7 @@
   /// Autocomplete Colors
   --color-autocomplete-font: #fff;
   --color-autocomplete-border: transparent;
+  --color-autocomplete-shadow: 0 4px 12px rgba(23, 23, 23, 0.9);
   --color-autocomplete-background: #303134;
   --color-autocomplete-background-hover: #171717;
   /// Answer Colors
@@ -261,12 +263,6 @@
 @phone: 50em;
 @small-phone: 35em;
 @ultra-small-phone: 20rem;
-
-/// Autocomplete fixes/changes
-.autocomplete.open {
-  margin-top: 4rem !important;
-  box-shadow: var(--color-search-shadow-hover);
-}
 
 /// From style.less
 @stacked-bar-chart: rgb(0, 0, 0);
